# Redpitaya-IO-Sync

./: .gitignore  LICENSE  README.md
.github/workflows/: docs.yml
doc/: Makefile  conf.py  examples.rst  index.rst  requirements.txt
doc/api/: device.rst  frame.rst  io.rst  sequence.rst  serial.rst
driver/: pyproject.toml
driver/src/redpitaya_io_sync/: __init__.py  frame.py  sequence.py
driver/src/redpitaya_io_sync/bitstream/: io_sync_rp_125_14_z7010.bit  io_sync_rp_125_14_z7020.bit
driver/src/redpitaya_io_sync/device/: __init__.py  rp_125_14.py  rp_125_14_mock.py  rp_125_14_z7010.py  rp_125_14_z7020.py  rp_base.py
driver/src/redpitaya_io_sync/dma/: dma.py
driver/src/redpitaya_io_sync/io/: analog.py  base.py  digital.py  led.py  pwm.py  rf.py  scope.py  sync.py
driver/src/redpitaya_io_sync/serial/: spi.py  uart.py
example/: 00_led_blink.ipynb  01_digital_in_out.ipynb  02_serial.ipynb  03_analog_in_out.ipynb  04_rf_in_out.ipynb  05_param_io_frame.ipynb  06_multi_device_sync.ipynb  analog_in_out.ipynb  led_blink.ipynb  mock_sequence.py  param_io_frame.ipynb  rf_in_out.ipynb  rp_125_14_led_blink.py  serial.ipynb  spi.ipynb
fpga/constraints/: redpitaya-125-14.xdc
fpga/modules/: analog.v  data_mux.v  dds_compiler_0.xci  dds_wrapper.v  digital_io.v  instr_breakout.v  instr_mux.v  iobuf_array.v  led.v  pwm.v  scope.v  sdm.v  sync.v  (+8 more)
redpitaya_io_sync/: pyproject.toml
redpitaya_io_sync/src/redpitaya_io_sync/: __init__.py  frame.py  sequence.py  sequencer.py  trigger.py
redpitaya_io_sync/src/redpitaya_io_sync/device/: rp_125_14_mock.py  rp_125_14_z7010.py  rp_125_14_z7020.py  rp_base.py
redpitaya_io_sync/src/redpitaya_io_sync/devices/: base.py  rp_125_14_base.py  rp_125_14_mock.py  rp_125_14_z7010.py  rp_125_14_z7020.py  rp_base.py
redpitaya_io_sync/src/redpitaya_io_sync/io/: analog.py  base.py  digital.py  monitor.py  pwm.py  scope.py  sync.py  xadc.py
test/: test_latency.ipynb
tests/: test_imports.py  test_simple_sequence.py
(+6 files in other folders)
