[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "redpitaya_io_sync"
version = "1.0.0"
authors = [
    {name = "Pau Gómez", email = "pau.gomez@dspsandbox.org"},
]
description = "Library for Synchronous and Deterministic Control of Red Pitaya's Digital and Analog IOs"
requires-python = ">=3.8"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
redpitaya_io_sync = ["bitstream/*.bit"]
